cmake_minimum_required (VERSION 3.8)

project ("AdventOfCode2021")

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(AoC_01_1	aoc01_1.cpp)
add_executable(AoC_01_2 aoc01_2.cpp)
add_executable(AoC_02_1	aoc02_1.cpp)
add_executable(AoC_02_2 aoc02_2.cpp)
add_executable(AoC_03_1 aoc03_1.cpp)
add_executable(AoC_03_2 aoc03_2.cpp)
add_executable(AoC_04_1 aoc04_1.cpp)
add_executable(AoC_04_2 aoc04_2.cpp)
add_executable(AoC_05_1 aoc05_1.cpp toolbox.h)
add_executable(AoC_05_2 aoc05_2.cpp toolbox.h)
add_executable(AoC_06   aoc06.cpp)

configure_file(input_files/aoc01.txt ${CMAKE_BINARY_DIR}/aoc01.txt COPYONLY)
configure_file(input_files/aoc01_sample.txt ${CMAKE_BINARY_DIR}/aoc01_sample.txt COPYONLY)
configure_file(input_files/aoc02.txt ${CMAKE_BINARY_DIR}/aoc02.txt COPYONLY)
configure_file(input_files/aoc02_sample.txt ${CMAKE_BINARY_DIR}/aoc02_sample.txt COPYONLY)
configure_file(input_files/aoc03.txt ${CMAKE_BINARY_DIR}/aoc03.txt COPYONLY)
configure_file(input_files/aoc03_sample.txt ${CMAKE_BINARY_DIR}/aoc03_sample.txt COPYONLY)
configure_file(input_files/aoc04.txt ${CMAKE_BINARY_DIR}/aoc04.txt COPYONLY)
configure_file(input_files/aoc04_sample.txt ${CMAKE_BINARY_DIR}/aoc04_sample.txt COPYONLY)
configure_file(input_files/aoc05.txt ${CMAKE_BINARY_DIR}/aoc05.txt COPYONLY)
configure_file(input_files/aoc05_sample.txt ${CMAKE_BINARY_DIR}/aoc05_sample.txt COPYONLY)
configure_file(input_files/aoc06.txt ${CMAKE_BINARY_DIR}/aoc06.txt COPYONLY)
configure_file(input_files/aoc06_sample.txt ${CMAKE_BINARY_DIR}/aoc06_sample.txt COPYONLY)
