cmake_minimum_required (VERSION 3.8)

project ("AdventOfCode2021")

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(AoC_01   aoc01.cpp)
add_executable(AoC_02   aoc02.cpp)
add_executable(AoC_03   aoc03.cpp)
add_executable(AoC_04   aoc04.cpp)
add_executable(AoC_05   aoc05.cpp toolbox.h)
add_executable(AoC_06   aoc06.cpp)
add_executable(AoC_07   aoc07.cpp)
add_executable(AoC_08   aoc08.cpp)
add_executable(AoC_09   aoc09.cpp)

configure_file(input_files/aoc01.txt ${CMAKE_BINARY_DIR}/aoc01.txt COPYONLY)
configure_file(input_files/aoc01_sample.txt ${CMAKE_BINARY_DIR}/aoc01_sample.txt COPYONLY)
configure_file(input_files/aoc02.txt ${CMAKE_BINARY_DIR}/aoc02.txt COPYONLY)
configure_file(input_files/aoc02_sample.txt ${CMAKE_BINARY_DIR}/aoc02_sample.txt COPYONLY)
configure_file(input_files/aoc03.txt ${CMAKE_BINARY_DIR}/aoc03.txt COPYONLY)
configure_file(input_files/aoc03_sample.txt ${CMAKE_BINARY_DIR}/aoc03_sample.txt COPYONLY)
configure_file(input_files/aoc04.txt ${CMAKE_BINARY_DIR}/aoc04.txt COPYONLY)
configure_file(input_files/aoc04_sample.txt ${CMAKE_BINARY_DIR}/aoc04_sample.txt COPYONLY)
configure_file(input_files/aoc05.txt ${CMAKE_BINARY_DIR}/aoc05.txt COPYONLY)
configure_file(input_files/aoc05_sample.txt ${CMAKE_BINARY_DIR}/aoc05_sample.txt COPYONLY)
configure_file(input_files/aoc06.txt ${CMAKE_BINARY_DIR}/aoc06.txt COPYONLY)
configure_file(input_files/aoc06_sample.txt ${CMAKE_BINARY_DIR}/aoc06_sample.txt COPYONLY)
configure_file(input_files/aoc07.txt ${CMAKE_BINARY_DIR}/aoc07.txt COPYONLY)
configure_file(input_files/aoc07_sample.txt ${CMAKE_BINARY_DIR}/aoc07_sample.txt COPYONLY)
configure_file(input_files/aoc08.txt ${CMAKE_BINARY_DIR}/aoc08.txt COPYONLY)
configure_file(input_files/aoc08_sample.txt ${CMAKE_BINARY_DIR}/aoc08_sample.txt COPYONLY)
configure_file(input_files/aoc09.txt ${CMAKE_BINARY_DIR}/aoc09.txt COPYONLY)
configure_file(input_files/aoc09_sample.txt ${CMAKE_BINARY_DIR}/aoc09_sample.txt COPYONLY)
